# adventofcode2025

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
notebooks/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  10.ipynb  11.ipynb  12.ipynb
