[project]
name = "adventofcode2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "marimo>=0.17.7",
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "polars>=1.35.1",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]
